--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.28.0"
+    "eslint": "^7.28.0",
+    "typescript": "^4.3.3"
   }
 }
