--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@types/node-uuid": "^0.0.28",
     "cheerio": "^1.0.0-rc.10",
     "gatsby": "^3.6.2",
     "gatsby-plugin-manifest": "^3.7.1",
@@ -36,6 +37,6 @@
   },
   "devDependencies": {
     "eslint": "^7.28.0",
-    "typescript": "^4.3.3"
+    "typescript": "^4.3.4"
   }
 }
