--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/node-uuid": "0.0.28",
     "@types/react-redux": "^7.1.16",
+    "@types/react-select": "^4.0.15",
     "@types/redux-logger": "^3.0.8",
     "cheerio": "^1.0.0-rc.10",
     "gatsby": "^3.6.2",
