--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "jest"
   },
   "dependencies": {
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.1.9",
     "@types/node-uuid": "0.0.28",
     "@types/react-redux": "^7.1.16",
     "@types/react-select": "^4.0.15",
@@ -39,7 +42,16 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@types/jest": "^26.0.23",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^27.0.5",
+    "babel-preset-gatsby": "^1.8.0",
     "eslint": "^7.28.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.5",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
   }
 }
