add test for signup form submission

--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "dependencies": {
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/node-uuid": "0.0.28",
     "@types/react-redux": "^7.1.16",
     "@types/react-select": "^4.0.15",
     "@types/redux-logger": "^3.0.8",
     "cheerio": "^1.0.0-rc.10",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "gatsby": "^3.6.2",
     "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-netlify-cms": "^5.7.0",
